--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <ul>
               <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
               <li class="nav-item"><a href="./pag_produtos.html"target="_blank" class="nav-link">Produtos</a></li>
-              <li class="nav-item"><a href="./pag_nossaLoja.html"target="_blank" class="nav-link">Loja</a></li>
+              <li class="nav-item"><a href="./pag_nossaLoja.html" class="nav-link">Loja</a></li>
               <li class="nav-item"><a href="#contate-me" class="nav-link">Contate-me</a></li>
           </ul>
       </div>
@@ -42,7 +42,7 @@
     <ul>
       <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
       <li class="nav-item"><a href="./pag_produtos.html"target="_blank" class="nav-link">Produtos</a></li>
-      <li class="nav-item"><a href="./pag_nossaLoja.html"target="_blank" class="nav-link">Loja</a></li>
+      <li class="nav-item"><a href="./pag_nossaLoja.html"class="nav-link">Loja</a></li>
       <li class="nav-item"><a href="#contate-me" class="nav-link">Contate-me</a></li>
     </ul>
   </div>
