--- a/pag_cremora.html
+++ b/pag_cremora.html
@@ -25,9 +25,9 @@
         </div>
         <div class="nav-list">
             <ul>
-                <li class="nav-item"><a href="./index.html" target="_blank" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="./index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="./pag_produtos.html" target="_blank" class="nav-link">Produtos</a></li>
-                <li class="nav-item"><a href="./pag_nossaLoja.html" target="_blank" class="nav-link">Loja</a></li>
+                <li class="nav-item"><a href="./pag_nossaLoja.html" class="nav-link">Loja</a></li>
                 <li class="nav-item"><a href="#contate-me" class="nav-link">Contate-me</a></li>
             </ul> 
         </div>
@@ -43,9 +43,9 @@
       <!-- Menu mobile -->
     <div class="mobile-menu">
       <ul>
-        <li class="nav-item"><a href="./index.html"target="_blank" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="./index.html"class="nav-link">Home</a></li>
         <li class="nav-item"><a href="./pag_produtos.html"target="_blank" class="nav-link">Produtos</a></li>
-        <li class="nav-item"><a href="./pag_nossaLoja.html"target="_blank" class="nav-link">Loja</a></li>
+        <li class="nav-item"><a href="./pag_nossaLoja.html" class="nav-link">Loja</a></li>
         <li class="nav-item"><a href="#contate-me" class="nav-link">Contate-me</a></li>
       </ul>
     </div>
