--- a/pag_nossaLoja.html
+++ b/pag_nossaLoja.html
@@ -26,7 +26,7 @@
         </div>
         <div class="nav-list">
             <ul>
-                <li class="nav-item"><a href="./index.html" target="_blank" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="./index.html"  class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="./pag_produtos.html"target="_blank" class="nav-link">Produtos</a></li>
                 <li class="nav-item"><a href="#pag-loja" class="nav-link">Loja</a></li>
                 <li class="nav-item"><a href="#contate-me" class="nav-link">Contate-me</a></li>
