--- a/pag_produtos.html
+++ b/pag_produtos.html
@@ -22,9 +22,9 @@
         </div>
         <div class="nav-list">
             <ul>
-                <li class="nav-item"><a href="./index.html" target="_blank" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="./index.html"  class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#pag-produtos" class="nav-link">Produtos</a></li>
-                <li class="nav-item"><a href="./pag_nossaLoja.html" target="_blank" class="nav-link">Loja</a></li>
+                <li class="nav-item"><a href="./pag_nossaLoja.html" class="nav-link">Loja</a></li>
                 <li class="nav-item"><a href="#contate-me"class="nav-link">Contate-me</a></li>
             </ul> 
         </div>
@@ -40,9 +40,9 @@
         <!-- Menu mobile -->
     <div class="mobile-menu">
         <ul>
-        <li class="nav-item"><a href="./index.html"target="_blank" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="./index.html" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="#pag-produtos" class="nav-link">Produtos</a></li>
-        <li class="nav-item"><a href="./pag_nossaLoja.html"target="_blank" class="nav-link">Loja</a></li>
+        <li class="nav-item"><a href="./pag_nossaLoja.html" class="nav-link">Loja</a></li>
         <li class="nav-item"><a href="#contate-me" class="nav-link">Contate-me</a></li>
         </ul>
     </div>
